<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/main_menu"
      android:layout_width="wrap_content" >

    <item android:title="@string/item_reset" android:id="@+id/reset_result"
          android:orderInCategory="100" android:icon="@drawable/ic_menu_clear"
          app:showAsAction="ifRoom"/>
    <item android:title="@string/item_about" android:id="@+id/action_about" android:orderInCategory="100"
          android:icon="@drawable/ic_menu_info" app:showAsAction="always"/>
    <item android:title="@string/sound_on" android:id="@+id/sound_item"
          app:showAsAction="never"/>
    <item android:title="@string/small_size" android:id="@+id/button_size_item"
          app:showAsAction="never"/>
    <item android:title="@string/clear_all_item" android:id="@+id/clear_all_item" android:orderInCategory="100"
          android:icon="@drawable/ic_menu_clear_all" app:showAsAction="never"/>
 </menu>