<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:id="@+id/root"
        tools:context=".MainActivity" >


    <ImageButton
            android:src="@drawable/tap_me_but"
            android:contentDescription="@string/button_tap_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tap_me_button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintVertical_bias="0.5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:background="@color/colorBackground"/>
    <TextView
            android:id="@+id/game_score_text_view"
            android:text="@string/game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"/>
    <TextView
            android:id="@+id/time_left_text_view"
            android:text="@string/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textColor="@android:color/black"/>
</android.support.constraint.ConstraintLayout>